# game-of-life

./: cspell.json  index.html  package.json  webpack.config.cjs
backend/: game_server.py  pyproject.toml  websocket_proxy.mojo
backend/src/: main.py
src/: canvas.js  config.js  index.html  index.js  main.mjs
src/Workers/: fpsWorker.js  worker.js
src/assets/styles/: _index.css
src/constants/: index.js
src/utils/: utils.js
