[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Grigor Tonikyan <grigor.tonikyan@gmail.com>"]
readme = "README.md"
packages = [
    { include = "src" }
]
scripts = { "serv" = "src.main:main" }

[tool.poetry.dependencies]
python = "^3.12"
websockets = "^13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
builtins = ["_"]